AddSharedNodes is fork early so it can be executed concurrently to tableQueries